--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,11 @@
   box-sizing: border-box;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 body {
   font-family: "Graphik", sans-serif;
   color: #1b1b1b;
@@ -61,6 +66,55 @@ body {
   width: 24px;
   left: 8px;
   top: 9px;
+}
+
+.aside-menu {
+  margin-top: 216px;
+  grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  color: #7d7d7d;
+}
+.aside-menu__link {
+  font-size: 14px;
+  line-height: 20px;
+  width: -moz-max-content;
+  width: max-content;
+}
+.aside-menu__link:hover {
+  color: #1b1b1b;
+}
+.aside-menu__link.hovered {
+  color: #1b1b1b;
+  position: relative;
+}
+.aside-menu__link.hovered::after {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  background: url("../images/icons/cursor.svg");
+  position: absolute;
+  right: -13px;
+  bottom: -10px;
+}
+.aside-menu__link.active-link {
+  color: #3e29e3;
+}
+
+.main {
+  grid-column: 4/12;
+  margin-top: 48px;
+}
+.main__heading .level {
+  font-size: 24px;
+  line-height: 32px;
+}
+.main__heading .title {
+  font-size: 48px;
+  line-height: 56px;
+  margin-bottom: 16px;
 }
 
 .footer {
