--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,6 +10,10 @@
    padding: 0;
    box-sizing: border-box;
 }
+a {
+   color: inherit;
+   text-decoration: none;
+}
 body {
    font-family: 'Graphik', sans-serif;
    color: $mainColor;
@@ -57,6 +61,54 @@ body {
             left: 8px;
             top: 9px;
          }
+      }
+   }
+}
+.aside-menu {
+   margin-top: 216px;
+   grid-column: span 2;
+   display: flex;
+   flex-direction: column;
+   gap: 16px;
+   color: $grayColor;
+   &__link {
+      font-size: 14px;
+      line-height: 20px;
+      width: max-content;
+      &:hover {
+         color: $mainColor;
+      }
+      &.hovered {
+         color: $mainColor;
+         position: relative;
+         &::after {
+            content: '';
+            display: block;
+            width: 16px;
+            height: 16px;
+            background: url('../images/icons/cursor.svg');
+            position: absolute;
+            right: -13px;
+            bottom: -10px;
+         }
+      }
+      &.active-link {
+         color: $blue;
+      }
+   }
+}
+.main {
+   grid-column: 4/12;
+   margin-top: 48px;
+   &__heading {
+      .level {
+         font-size: 24px;
+         line-height: 32px;
+      }
+      .title {
+         font-size: 48px;
+         line-height: 56px;
+         margin-bottom: 16px;
       }
    }
 }
