--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -2,3 +2,4 @@ $mainColor: #1b1b1b;
 $grayColor: #7d7d7d;
 $medium: 'Graphik Medium';
 $blue: #3e29e3;
+$grid: repeat(12, minmax(60px, min(80px, 8.33vw)));
