--- a/styles/style.scss
+++ b/styles/style.scss
@@ -100,7 +100,10 @@ body {
 .main {
    grid-column: 4/12;
    margin-top: 48px;
+   display: grid;
+   grid-template-columns: $grid;
    &__heading {
+      grid-column: span 6;
       .level {
          font-size: 24px;
          line-height: 32px;
@@ -109,6 +112,70 @@ body {
          font-size: 48px;
          line-height: 56px;
          margin-bottom: 16px;
+      }
+      margin-bottom: 64px;
+   }
+   &__content {
+      grid-column: span 12;
+      display: grid;
+      grid-template-columns: $grid;
+      .section__text {
+         line-height: 24px;
+         font-size: 16px;
+         margin-bottom: 48px;
+         grid-column: span 8;
+      }
+      .subtitle {
+         grid-column: span 12;
+         font-size: 32px;
+         line-height: 40px;
+         margin-bottom: 24px;
+      }
+      .preface {
+         grid-column: span 8;
+         font-size: 16px;
+         line-height: 24px;
+         margin-bottom: 40px;
+      }
+   }
+   .section {
+      margin-top: 40px;
+      grid-column: span 12;
+      display: grid;
+      grid-template-columns: $grid;
+      .grid__division {
+         grid-column: span 12;
+         display: grid;
+         grid-template-columns: $grid;
+         .grid__subtitle {
+            grid-column: span 12;
+            font-family: $medium;
+            font-size: 24px;
+            line-height: 32px;
+            margin-bottom: 32px;
+         }
+         .table {
+            grid-column: span 10;
+            display: flex;
+            justify-content: space-between;
+            list-style-type: none;
+            &__item {
+               display: inline-block;
+               color: $grayColor;
+               font-size: 14px;
+               line-height: 20px;
+               &__value {
+                  margin-top: 8px;
+                  font-size: 24px;
+                  line-height: 32px;
+                  color: $mainColor;
+               }
+            }
+         }
+         .grid__image {
+            grid-column: span 12;
+            padding: 45px 0;
+         }
       }
    }
 }
