--- a/styles/style.scss
+++ b/styles/style.scss
@@ -178,6 +178,61 @@ body {
          }
       }
    }
+   .typography {
+      &__content {
+         grid-column: span 12;
+         grid-template-columns: $grid;
+      }
+      &__tabs {
+         display: flex;
+         gap: 32px;
+         grid-column: span 12;
+         list-style-type: none;
+         margin-top: 8px;
+         position: relative;
+         &::before {
+            content: '';
+            position: absolute;
+            top: 39px;
+            width: 100%;
+            height: 1px;
+            background: #cbcbcc;
+         }
+         .tab {
+            cursor: pointer;
+            transition: color 0.3s;
+            display: inline-block;
+            color: $grayColor;
+            font-size: 16px;
+            line-height: 24px;
+            font-family: $medium;
+            position: relative;
+            width: max-content;
+            &:hover {
+               color: $mainColor;
+               &::before {
+                  background: $blue;
+               }
+            }
+            &::before {
+               content: '';
+               position: absolute;
+               top: 38px;
+               left: 0;
+               width: 100%;
+               height: 2px;
+               background: transparent;
+               transition: background 0.3s;
+            }
+            &.active-tab {
+               color: $mainColor;
+               &::before {
+                  background: $blue;
+               }
+            }
+         }
+      }
+   }
 }
 .footer {
    justify-content: center;
