inputs + selects start

--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -3,3 +3,4 @@ $grayColor: #7d7d7d;
 $medium: 'Graphik Medium';
 $blue: #3e29e3;
 $grid: repeat(12, minmax(60px, min(80px, 8.33vw)));
+$error: #e80f3b;
