--- a/styles/style.css
+++ b/styles/style.css
@@ -485,12 +485,26 @@ img {
   position: relative;
   width: 100%;
 }
+.main .ui__division .ui__selects .ui__select .custom-placeholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(0%);
+  color: #1b1b1b;
+  transition: transform 0.3s, font-size 0.3s, color 0.3s;
+}
 .main .ui__division .ui__selects .ui__select .select-box {
   position: relative;
   padding-bottom: 6px;
+  height: 30px;
   border-bottom: 2px solid #7d7d7d;
   cursor: pointer;
   transition: 0.3s ease;
+}
+.main .ui__division .ui__selects .ui__select .select-box.used .custom-placeholder {
+  font-size: 12px;
+  color: #7d7d7d;
+  transform: translateY(-100%);
 }
 .main .ui__division .ui__selects .ui__select .select-box:hover {
   border-color: #3e29e3;
@@ -512,6 +526,9 @@ img {
   transform: rotate(135deg);
   transition: transform 0.3s ease;
 }
+.main .ui__division .ui__selects .ui__select .select-box.active .arrow {
+  transform: rotate(-45deg);
+}
 .main .ui__division .ui__selects .ui__select .options {
   list-style-type: none;
   position: absolute;
@@ -519,6 +536,7 @@ img {
   overflow-y: auto;
   max-height: 170px;
   background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
   display: none;
 }
 .main .ui__division .ui__selects .ui__select .options.active {
@@ -527,9 +545,22 @@ img {
 .main .ui__division .ui__selects .ui__select .options .option {
   width: 100%;
   padding: 8px 24px;
+  color: #1b1b1b;
+  background-color: #fff;
+  transition: background-color 0.3s, color 0.3s;
+  cursor: pointer;
+}
+.main .ui__division .ui__selects .ui__select .options .option.selected {
+  color: #3d28e1;
+}
+.main .ui__division .ui__selects .ui__select .options .option:hover {
+  background-color: #3e29e3;
+  color: #fff;
 }
 
 .footer {
+  margin-top: 160px;
+  padding-bottom: 48px;
   justify-content: center;
   justify-items: center;
 }
