--- a/styles/style.scss
+++ b/styles/style.scss
@@ -487,12 +487,28 @@ img {
             .ui__select {
                position: relative;
                width: 100%;
+               .custom-placeholder {
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  transform: translateY(0%);
+                  color: $mainColor;
+                  transition: transform 0.3s, font-size 0.3s, color 0.3s;
+               }
                .select-box {
                   position: relative;
                   padding-bottom: 6px;
+                  height: 30px;
                   border-bottom: 2px solid $grayColor;
                   cursor: pointer;
                   transition: 0.3s ease;
+                  &.used {
+                     .custom-placeholder {
+                        font-size: 12px;
+                        color: $grayColor;
+                        transform: translateY(-100%);
+                     }
+                  }
                   &:hover {
                      border-color: $blue;
                   }
@@ -513,6 +529,11 @@ img {
                      transform: rotate(135deg);
                      transition: transform 0.3s ease;
                   }
+                  &.active {
+                     .arrow {
+                        transform: rotate(-45deg);
+                     }
+                  }
                }
                .options {
                   list-style-type: none;
@@ -521,6 +542,7 @@ img {
                   overflow-y: auto;
                   max-height: 170px;
                   background: #fff;
+                  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
                   display: none;
                   &.active {
                      display: block;
@@ -528,6 +550,17 @@ img {
                   .option {
                      width: 100%;
                      padding: 8px 24px;
+                     color: $mainColor;
+                     background-color: #fff;
+                     transition: background-color 0.3s, color 0.3s;
+                     cursor: pointer;
+                     &.selected {
+                        color: #3d28e1;
+                     }
+                     &:hover {
+                        background-color: $blue;
+                        color: #fff;
+                     }
                   }
                }
             }
@@ -536,6 +569,8 @@ img {
    }
 }
 .footer {
+   margin-top: 160px;
+   padding-bottom: 48px;
    justify-content: center;
    justify-items: center;
    span {
