--- a/styles/style.scss
+++ b/styles/style.scss
@@ -358,6 +358,9 @@ img {
          grid-column: span 12;
          display: grid;
          grid-template-columns: $grid;
+         &.buttons {
+            margin-top: 232px;
+         }
          .ui__subtitle {
             grid-column: span 12;
             font-family: $medium;
@@ -502,6 +505,21 @@ img {
                   border-bottom: 2px solid $grayColor;
                   cursor: pointer;
                   transition: 0.3s ease;
+                  &.hovered {
+                     &.hovered {
+                        border-color: $blue;
+                        &::after {
+                           content: '';
+                           display: block;
+                           width: 16px;
+                           height: 16px;
+                           background: url('../images/icons/cursor.svg');
+                           position: absolute;
+                           right: 55px;
+                           bottom: 6px;
+                        }
+                     }
+                  }
                   &.used {
                      .custom-placeholder {
                         font-size: 12px;
@@ -565,11 +583,339 @@ img {
                }
             }
          }
+         .ui__buttons {
+            margin-top: 40px;
+            grid-column: span 12;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            column-gap: 32px;
+            row-gap: 76px;
+            .ui__button-container {
+               position: relative;
+               .narrative {
+                  position: absolute;
+                  color: $grayColor;
+                  font-size: 14px;
+                  line-height: 20px;
+                  bottom: 80px;
+               }
+               .ui__button {
+                  position: relative;
+                  max-width: 148px;
+                  border-radius: 32px;
+                  color: #fff;
+                  font-size: 16px;
+                  font-family: $medium;
+                  font-weight: 500;
+                  line-height: 24px;
+                  padding: 16px 32px;
+                  border: none;
+                  cursor: pointer;
+                  background: linear-gradient(45deg, #dd80ed 0%, #3d28e3 100%);
+                  &__text {
+                     position: relative;
+                     z-index: 3;
+                  }
+                  // Для Hover
+                  &::before {
+                     content: '';
+                     position: absolute;
+                     top: 0;
+                     left: 0;
+                     width: 100%;
+                     height: 100%;
+                     border-radius: inherit;
+                     opacity: 0;
+                     transition: opacity 0.5s ease-in-out;
+                     background: linear-gradient(
+                        225deg,
+                        #dd80ed 0%,
+                        #3d28e3 100%
+                     );
+                  }
+                  // Для нажатия
+                  &::after {
+                     content: '';
+                     position: absolute;
+                     top: 0;
+                     left: 0;
+                     width: 100%;
+                     height: 100%;
+                     border-radius: inherit;
+                     opacity: 0;
+                     transition: opacity 0.5s ease-in-out;
+                     background: linear-gradient(
+                        207deg,
+                        #dd80ed 0%,
+                        #3d28e3 83.33%
+                     );
+                  }
+                  &:hover::before {
+                     opacity: 1;
+                  }
+                  &:active::after {
+                     opacity: 1;
+                  }
+                  &.click::after {
+                     opacity: 1;
+                  }
+                  &.hovered::before {
+                     opacity: 1;
+                     z-index: 2;
+                  }
+                  &:disabled {
+                     background: #cbcbcc !important;
+                     &::after {
+                        opacity: 0 !important;
+                     }
+                     &::before {
+                        opacity: 0 !important;
+                     }
+                  }
+               }
+            }
+         }
+         .ui__examples {
+            grid-column: span 12;
+            display: grid;
+            grid-template-columns: $grid;
+            .checkboxes-examples {
+               grid-column: 1/6;
+               display: flex;
+               flex-direction: column;
+               gap: 24px;
+               .checkbox-container {
+                  display: flex;
+                  align-items: center;
+                  label,
+                  .checkbox-wrapper {
+                     cursor: pointer;
+                  }
+                  label {
+                     padding-left: 40px;
+                     position: relative;
+                     z-index: 2;
+                     &:hover ~ .checkbox-wrapper {
+                        border-color: $blue;
+                     }
+                  }
+                  .checkbox {
+                     display: none;
+                  }
+                  .checkbox:checked ~ .checkbox-wrapper {
+                     background-color: $blue;
+                     border-color: $blue;
+                  }
+                  .checkbox:checked ~ .checkbox-wrapper .checkmark {
+                     opacity: 1;
+                  }
+                  .checkbox-wrapper {
+                     position: absolute;
+                     display: flex;
+                     justify-content: center;
+                     align-items: center;
+                     width: 24px;
+                     height: 24px;
+                     border: 2px solid #aeadae;
+                     background-color: #fff;
+                     transition: border-color 0.3s ease-in-out,
+                        background-color 0.3s ease-in-out;
+                     .checkmark {
+                        opacity: 0;
+                     }
+                  }
+                  &.hovered {
+                     position: relative;
+                     &::after {
+                        content: '';
+                        display: block;
+                        width: 16px;
+                        height: 16px;
+                        background: url('../images/icons/cursor.svg');
+                        position: absolute;
+                        left: 144px;
+                        bottom: -11px;
+                     }
+                     .checkbox-wrapper {
+                        border-color: $blue;
+                     }
+                  }
+                  &.checked {
+                     .checkbox-wrapper {
+                        border-color: $blue;
+                        background-color: $blue;
+                        .checkmark {
+                           opacity: 1;
+                        }
+                     }
+                  }
+               }
+            }
+            .radio-examples {
+               grid-column: 6/11;
+               display: flex;
+               flex-direction: column;
+               gap: 24px;
+               .radio-container {
+                  display: flex;
+                  align-items: center;
+                  label,
+                  .radio-wrapper {
+                     cursor: pointer;
+                  }
+                  label {
+                     padding-left: 40px;
+                     position: relative;
+                     z-index: 2;
+                     &:hover ~ .radio-wrapper {
+                        border-color: $blue;
+                     }
+                  }
+                  .radio {
+                     display: none;
+                  }
+                  .radio:checked ~ .radio-wrapper {
+                     border-color: $blue;
+                  }
+                  .radio:checked ~ .radio-wrapper .checkmark {
+                     opacity: 1;
+                  }
+                  .radio-wrapper {
+                     position: absolute;
+                     display: flex;
+                     justify-content: center;
+                     align-items: center;
+                     width: 24px;
+                     height: 24px;
+                     border-radius: 50%;
+                     border: 2px solid #aeadae;
+                     background-color: #fff;
+                     transition: border-color 0.3s ease-in-out,
+                        background-color 0.3s ease-in-out;
+                     .checkmark {
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 50%;
+                        background: $blue;
+                        opacity: 0;
+                     }
+                  }
+                  &.hovered {
+                     position: relative;
+                     &::after {
+                        content: '';
+                        display: block;
+                        width: 16px;
+                        height: 16px;
+                        background: url('../images/icons/cursor.svg');
+                        position: absolute;
+                        left: 155px;
+                        bottom: -11px;
+                     }
+                     .radio-wrapper {
+                        border-color: $blue;
+                     }
+                  }
+                  &.checked {
+                     .radio-wrapper {
+                        border-color: $blue;
+                        .checkmark {
+                           opacity: 1;
+                        }
+                     }
+                  }
+               }
+            }
+         }
+         .accordions {
+            grid-column: span 12;
+            display: grid;
+            grid-template-columns: $grid;
+            row-gap: 24px;
+            .accordion {
+               grid-column: span 12;
+               display: grid;
+               grid-template-columns: $grid;
+               width: 100%;
+               padding-bottom: 15px;
+               border-bottom: 2px solid #cbcbcc;
+               transition: border-color 0.3s ease;
+               &:hover {
+                  .accordion__header {
+                     color: $mainColor;
+                  }
+                  border-color: $blue;
+               }
+               &__header {
+                  grid-column: span 12;
+                  position: relative;
+                  color: $grayColor;
+                  font-size: 16px;
+                  line-height: 24px;
+                  font-family: $medium;
+                  font-weight: 500;
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  transition: color 0.3s ease;
+
+                  cursor: pointer;
+                  .arrow {
+                     width: 6px;
+                     height: 6px;
+                     border-top: 2px solid $blue;
+                     border-right: 2px solid $blue;
+                     transform: rotate(135deg);
+                     transition: transform 0.3s ease;
+                  }
+               }
+               &__text {
+                  color: $mainColor;
+                  line-height: 24px;
+                  grid-column: span 8;
+                  height: 0;
+                  overflow: hidden;
+                  transition: height 0.3s ease, margin 0.3s ease;
+               }
+               &.active {
+                  .arrow {
+                     transform: rotate(-45deg);
+                  }
+                  .accordion__text {
+                     margin-top: 24px;
+                     margin-bottom: 15px;
+                     height: 100%;
+                     max-height: max-content;
+                  }
+                  .accordion__header {
+                     color: $mainColor;
+                  }
+                  border-color: $blue;
+               }
+               &.hovered {
+                  position: relative;
+                  &::after {
+                     content: '';
+                     display: block;
+                     width: 16px;
+                     height: 16px;
+                     background: url('../images/icons/cursor.svg');
+                     position: absolute;
+                     left: 33%;
+                     bottom: 5px;
+                  }
+                  .accordion__header {
+                     color: $mainColor;
+                  }
+                  border-color: $blue;
+               }
+            }
+         }
       }
    }
 }
 .footer {
-   margin-top: 160px;
+   margin-top: 120px;
    padding-bottom: 48px;
    justify-content: center;
    justify-items: center;
